# LogVisualizer

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  main.cpp
